export default interface ISensor {
    set temperaturaReactor(temperatura : number);

    get getTemperaturaReactor () : number;
}