export default interface ISuscriptorTemperatura {
    actualizarEstado(temperatura : number) : void;
}