export default interface IGenerador {
    generarEnergia(capacidadProductiva : number, temperatura : number) : number;
}