export default interface IMostrable{
    /**
     * Mostrar Obliga a quien implementa sobreescribir Mostrar
     */
     mostrar():string;
}