import IMostrable from "./IMostrable";

export default class TableroConsola{
    public mostrarIndicadores(){
        
    }
}